fix(init): remove min-height from body to avoid scrollbars

--- a/styl/init.styl
+++ b/styl/init.styl
@@ -12,7 +12,6 @@ sm-init($init-ul = true, $init-font = "Roboto", $h1-fontsize = 4.2rem, $h2-fonts
   )
   body
     margin 0
-    min-height 100vh
 
   if $init-ul
     ul
